--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <title>24kTest</title>
-        <meta name="bmstable" content="header.json" />
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- Tabulator -->
