--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html lang="en">
     <head>
         <title>24k Test</title>
-        <meta name="bmstable" content="header.json" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
+        <meta http-equiv="Content-Style-Type" content="text/css" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+        <link href="style.css" rel="stylesheet" type="text/css" media="screen,print" />
+        <script src="jquery-2.0.2.min.js"></script>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- Tabulator -->
