--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-Script-Type" content="text/javascript" />
         <meta http-equiv="Content-Style-Type" content="text/css" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/testheader.json" />
         <link href="style.css" rel="stylesheet" type="text/css" media="screen,print" />
         <script src="jquery-2.0.2.min.js"></script>
 
