--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html lang="en">
     <head>
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/testheader.json" />
     </head>        
 </html>
