--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>24K Normal//</title>
+        <title>24K Normal</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
     </head>        
 </html>
