--- a/index.html
+++ b/index.html
@@ -1,8 +1,213 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- saved from url=(0031)http://onzonium.at-ninja.jp/dp/ -->
+<html lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
+<title _msthash="149916" _msttexthash="377572">ATOM DIFFICULTY TABLE (DP)</title>
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta http-equiv="Content-Style-Type" content="text/css">
 
-<html lang="en">
-    <head>
-        <title>24K Normal</title>
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
-    </head>        
-</html>
+<meta name="bmstable" content="http://onzonium.at-ninja.jp/dp/header.json">
+<link href="style.css" rel="stylesheet" type="text/css" media="screen,print">
+<script src="jquery-2.0.2.min.js"></script>
+</head>
+
+<body class="diff" style=""><script type="text/javascript" charset="utf-8" src="./index_files/encount"></script><script type="text/javascript" charset="utf-8" src="./index_files/1.17.46"></script><div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><script type="text/javascript" charset="utf-8" src="./index_files/fire"></script><div id="asumi-frame-435-1792" style="height: 280px;"><script type="text/javascript">
+  var passBackId = 94;
+  var code =
+    '<scr'+'ipt async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scr'+'ipt>' +
+    '<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3206922088443137" data-ad-slot="1467175996"></ins>' +
+    '<scr'+'ipt>' +
+    '(adsbygoogle = window.adsbygoogle || []).push({});' +
+    '</scr'+'ipt>';
+
+  document.write ("<scr" + "ipt type='text/javascript' src='//gad.shinobi.jp/?code=" + encodeURIComponent(code) + "&location=" + encodeURIComponent(document.location.href) + "&passBackId="+passBackId +"'></scr" + "ipt>");
+</script><script type="text/javascript" src="./index_files/saved_resource"></script><script type="text/javascript" charset="utf-8" src="./index_files/fire(1)"></script><div id="asumi-frame-94-1241" style="height: 250px;"><script type="text/javascript" src="./index_files/publishertag.js.download"></script>
+<script type="text/javascript">
+Criteo.DisplayAd({
+    "zoneid": 1346562,
+    "async": false});
+</script><script type="text/javascript" src="./index_files/ajs.php"></script><iframe id="cto_iframe_63da26fb6a" frameborder="0" allowtransparency="true" hspace="0" marginwidth="0" marginheight="0" scrolling="no" vspace="0" width="600px" height="250px" src="./index_files/saved_resource.html"></iframe>
+</div>
+</div><script type="text/javascript" charset="utf-8" src="./index_files/__sys__inactive_message.js.download"></script><p style="font-size: 10px; padding: 3px; margin:0; text-align: center; color: #aaa; background:#fffffc;" _msthash="419159" _msttexthash="9917284">[PR] This ad has been shown since it has not been updated for more than 3 months. <br _istranslated="1">It will disappear within 24 hours of updating the homepage.</p></div></div>
+<p style="color:#ffffee"><font _mstmutation="1" _msthash="121966" _msttexthash="68480737">This page is for creating tables corresponding to the next difficulty table format. <br _mstmutation="1" _istranslated="1"> Get the URL (header.json) of the header from the meta tag (name="bmstable") and extract the data part URL (score.json) and symbols from the header part. <br _mstmutation="1" _istranslated="1"> After that, the data part is loaded and the table is created. <br _mstmutation="1" _istranslated="1"> <br _mstmutation="1" _istranslated="1"> Please feel free to modify or reuse it. <br _mstmutation="1" _istranslated="1"> (Model-dependent characters are used.) )</font><br>
+</p>
+
+<!--　　　　　ここから難易度表本体　　　　　-->
+<div class="tableflame">
+<table align="center" cellspacing="1" cellpadding="2　border=&quot;0&quot;" bgcolor="#000000" id="table_int"><tbody><tr height="20" style="color:white;background-color:#666666"><td align="center" _msthash="669760" _msttexthash="15860">LV</td><td align="center" _msthash="669761" _msttexthash="63531">title</td><td align="center" _msthash="669762" _msttexthash="137072">substance</td><td align="center" _msthash="669763" _msttexthash="205699">differential</td><td align="center" _msthash="669764" _msttexthash="98683">comment</td></tr><tr class="tr_separate" id="&#9883;-1"><td colspan="6" align="center"><b _msthash="1604317" _msttexthash="1055236">&#9883; -1 (2 scores)</b></td></tr><tr class="tr_normal"><td width="5%" _msthash="669765" _msttexthash="909766">&#9883;-1</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=f46f58e5f55724effa74308cf098e7a8" target="_blank" _msthash="669766" _msttexthash="332475">HIGH-ENERGY [14keys]</a></td><td width="20%"><a href="https://1drv.ms/f/s!ArMyTL67Bm07hHBy44Mz2xEyMpCY" _msthash="669767" _msttexthash="49413">skns</a></td><td width="10%"><a href="http://onzonium.at-ninja.jp/sabun/HIGH-ENERGY.zip" _msthash="669768" _msttexthash="14092">DL</a></td><td width="15%" _msthash="669769" _msttexthash="987636">☆ 8<br _istranslated="1"><br _istranslated="1"> dishes</td></tr><tr class="tr_normal"><td width="5%" _msthash="669770" _msttexthash="909766">&#9883;-1</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=190ef89f7c890d5ac3bf327acc4f6800" target="_blank" _msthash="669771" _msttexthash="806507">-Never ending journey-[Forever]</a></td><td width="20%"><a href="http://manbow.nothing.sh/event/event.cgi?action=More_def&amp;num=38&amp;event=127" _msthash="669772" _msttexthash="46202">SOMON</a></td><td width="10%"><a href="https://bms-chart-editors-group.github.io/event/bofxv/" _msthash="669773" _msttexthash="488722">to the diff planning page</a></td><td width="15%" _msthash="669774" _msttexthash="9098193">☆ 11<br _istranslated="1"><br _istranslated="1"> simultaneous push-off<br _istranslated="1"><br _istranslated="1"> plan "BOFXV differential secondary meeting (provisional)" participation work<br _istranslated="1"> onzonium name</td></tr><tr class="tr_separate" id="&#9883;3"><td colspan="6" align="center"><b _msthash="1596413" _msttexthash="1015326">&#9883;3 (1 score)</b></td></tr><tr class="tr_normal"><td width="5%" _msthash="669775" _msttexthash="904657">&#9883;3</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=35d8213f8a8a97ba9b85b687139093d1" target="_blank" _msthash="669776" _msttexthash="273702">E reviver(INSANE14)</a></td><td width="20%"><a href="http://onzonium.at-ninja.jp/dp/" _msthash="669777" _msttexthash="161044">sasakure.UK</a></td><td width="10%"><a href="http://onzonium.at-ninja.jp/sabun/E%20reviver.zip" _msthash="669778" _msttexthash="14092">DL</a></td><td width="15%" _msthash="669779" _msttexthash="391664">SECOND HALF DIFFICULTS, LN</td></tr><tr class="tr_separate" id="&#9883;11"><td colspan="6" align="center"><b _msthash="1604993" _msttexthash="1029561">&#9883;11 (1 score)</b></td></tr><tr class="tr_normal"><td width="5%" _msthash="669780" _msttexthash="910182">&#9883;11</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=44408db1e7ae8a3d95e60cf82de86df4" target="_blank" _msthash="669781" _msttexthash="2373514">Battle! Sarouin -Final Battle with Saruin- [Kamui, Indcapable]</a></td><td width="20%"><a href="http://lucifer.pussycat.jp/BMS/L_Saruin.zip" _msthash="669782" _msttexthash="386438">gold lamettaquiseed</a></td><td width="10%"><a href="http://onzonium.at-ninja.jp/sabun/%E6%B1%BA%E6%88%A6%EF%BC%81%E3%82%B5%E3%83%AB%E3%83%BC%E3%82%A4%E3%83%B3%20-Final%20Battle%20with%20Saruin-.zip" _msthash="669783" _msttexthash="14092">DL</a></td><td width="15%" _msthash="669784" _msttexthash="484536">LOCAL DIFFICULTY, RUS KILL, LN</td></tr><tr class="tr_separate" id="&#9883;？"><td colspan="6" align="center"><b _msthash="12625353" _msttexthash="7802366">&#9883;？ (1 score)</b></td></tr><tr class="tr_normal"><td width="5%" _msthash="669785" _msttexthash="7691697">&#9883;？</td><td width="20%"><a href="http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&amp;bmsmd5=0ee2943815c1bfc7e9d96f11a3aa2f69" target="_blank" _msthash="669786" _msttexthash="772863">RESISTANCE FOR RESISTANCE [ANOTHER14]</a></td><td width="20%" _msthash="669787" _msttexthash="141713"><a href="http://bms-members.sakura.ne.jp/dl/BOFU2016/R4R.zip">xra</a><br>(BOFU2016)</td><td width="10%"><a href="http://onzonium.at-ninja.jp/sabun/RESISTANCE%20FOR%20RESISTANCE.zip" _msthash="669788" _msttexthash="14092">DL</a></td><td width="15%" _msthash="669789" _msttexthash="560625">BPM CHANGE AND RHYTHM DIFFICULTS</td></tr></tbody></table>
+</div>
+<script language="javascript" type="text/javascript">
+$(document).ready(function(){
+	$.getJSON($("meta[name=bmstable]").attr("content"), function(header){
+		$.getJSON(header.data_url, function(information){
+			makeBMSTable(information,header.symbol);
+		});
+	});
+});
+
+function makeBMSTable(info, mark) {
+    var x = "";
+    var ev = "";
+    var count = 0;
+    var obj = $("#table_int");
+    // 表のクリア
+    obj.html("");
+    $("<tr height='20' style='color:white;background-color:#666666'><td align='center'>LV</td><td align='center'>タイトル</td><td align='center'>本体</td><td align='center'>差分</td><td align='center'>コメント</td></tr>").appendTo(obj);
+    var obj_sep = null;
+    for (var i = 0; i < info.length; i++) {
+        // 難度ごとの区切り
+        if (x != info[i].level) {
+            // 前の区切りに譜面数、平均密度を追加
+          	if (obj_sep != null) {
+                obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "譜面)</b></td>");
+            }
+            obj_sep = $("<tr class='tr_separate' id='" + mark + info[i].level + "'></tr>");
+            obj_sep.appendTo(obj);
+            count = 0;
+            x = info[i].level;
+        }
+        // 本文
+        var str = $("<tr class='tr_normal'></tr>");
+        if(info[i].state == 1) {
+        str = $("<tr class='tr_new'></tr>");
+        }
+        if(info[i].state == 2) {        
+        str = $("<tr class='tr_update'></tr>");
+        }
+        // レベル表記
+        $("<td width='5%'>" + mark + x + "</td>").appendTo(str);
+        // タイトル
+        $("<td width='20%'>" + "<a href='http://www.dream-pro.info/~lavalse/LR2IR/search.cgi?mode=ranking&bmsmd5=" + info[i].md5 + "' target='_blank'>" + info[i].title + "</a></td>").appendTo(str);
+        // アーティスト
+        var astr = "";
+        if(info[i].url != null) {
+        	if(info[i].artist != null) {
+        		astr = "<a href='" + info[i].url + "'>" + info[i].artist + "</a>";
+        	} else {
+        		astr = "<a href='" + info[i].url + "'>" + info[i].url + "</a>";
+        	}
+        } else {
+        	if(info[i].artist != null) {
+        		astr = info[i].artist;
+        	}
+        }
+        if(info[i].url_pack != null) {
+        	if(info[i].name_pack != null) {
+        		astr += "<br />(<a href='" + info[i].url_pack + "'>" + info[i].name_pack + "</a>)";
+        	} else {
+        		astr += "<br />(<a href='" + info[i].url_pack + "'>" + info[i].url_pack + "</a>)";
+        	}
+        } else {
+        	if(info[i].name_pack != null) {
+        		astr += "<br />(" + info[i].name_pack + ")";
+        	}
+        }
+        $("<td width='20%'>" + astr + "</td>").appendTo(str);
+        // 差分
+        if(info[i].url_diff != null) {
+        	if(info[i].name_diff != null) {
+	        $("<td width='10%'><a href='" + info[i].url_diff + "'>" + info[i].name_diff + "</a></td>").appendTo(str);
+        	} else {
+	        $("<td width='10%'><a href='" + info[i].url_diff + "'>" + info[i].url_diff + "</a></td>").appendTo(str);
+        	}
+        } else {
+        	if(info[i].name_diff != null) {
+	        $("<td width='10%'>" + info[i].name_diff + "</td>").appendTo(str);
+        	} else {
+	        $("<td width='10%'></td>").appendTo(str);
+        	}
+        }
+        // コメント
+        $("<td width='15%'>" + info[i].comment + "</td>").appendTo(str);
+        str.appendTo(obj);
+        count++;
+    }
+    // 最後の区切り処理
+    if (obj_sep != null) {
+        obj_sep.html("<td colspan='6' align='center'>" + "<b>" + mark + x + " (" + count + "譜面)</b></td>");
+    }
+}
+</script>
+<div style="text-align: center;"><div style="display: inline-block; position: relative; z-index: 9999;"><script type="text/javascript" charset="utf-8" src="./index_files/fire(2)"></script><div id="asumi-frame-434-1791"><script type="text/javascript">
+  var passBackId = 43;
+  var code =
+    '<scr'+'ipt async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></scr'+'ipt>' +
+    '<ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3206922088443137" data-ad-slot="8990442790"></ins>' +
+    '<scr'+'ipt>' +
+    '(adsbygoogle = window.adsbygoogle || []).push({});' +
+    '</scr'+'ipt>';
+
+  document.write ("<scr" + "ipt type='text/javascript' src='//gad.shinobi.jp/?code=" + encodeURIComponent(code) + "&location=" + encodeURIComponent(document.location.href) + "&passBackId="+passBackId +"'></scr" + "ipt>");
+</script><script type="text/javascript" src="./index_files/saved_resource(1)"></script><script type="text/javascript" charset="utf-8" src="./index_files/fire(3)"></script><div id="asumi-frame-43-3312" style="width: 300px; height: 250px;">    <script async="" src="./index_files/2.5.1-1.js.download"></script>
+    <script>
+        var adUnitID = "postbid_iframe";
+        var FLOOR_PRICE_USD = 0.65;
+        var ASUMI_ID = 43;
+        var PREBID_TIMEOUT = 1000;
+        var adUnits = [{
+            code: adUnitID,
+            mediaTypes: {
+            banner: {
+                sizes: [[300, 250]]
+            }
+       },
+       bids: [{
+           bidder: "rubicon",
+           params: {
+               accountId: 20272,
+               siteId: 242464,
+               zoneId: 1197088
+           }
+           }, {
+             bidder: "criteo",
+             params: {
+                 zoneId: 1389864
+             }
+         }, {
+             bidder: "rtbhouse",
+             params: {
+                 region: "prebid-asia",
+                 publisherId: "VwUhkz4IeGJVRXks0xX7"
+             }
+       }]
+     }];
+
+     var pbjs = pbjs || {};
+     pbjs.que = pbjs.que || [];
+
+     pbjs.bidderSettings = {
+       rubicon: {
+         bidCpmAdjustment : function(bidCpm, bid){
+           return bidCpm * .95;
+         }
+       }
+     };
+
+     pbjs.que.push(function() {
+         pbjs.setConfig({ priceGranularity: "dense" });
+         pbjs.addAdUnits(adUnits);
+         pbjs.requestBids({
+             timeout: PREBID_TIMEOUT,
+             bidsBackHandler: function() {
+                 var iframe = document.getElementById(adUnitID);
+                 var iframeDoc = iframe.contentWindow.document;
+                 var adServerTargeting = pbjs.getAdserverTargetingForAdUnitCode(adUnitID);
+
+                 var adID = adServerTargeting["hb_adid"];
+                 var bidCPM = adServerTargeting["hb_pb"];
+                 if (adID && Number(bidCPM) > FLOOR_PRICE_USD) {
+                     pbjs.renderAd(iframeDoc, adID);
+                 } else {
+                     iframe.remove();
+                     setTimeout(function() { (window.__asumi__ || window.parent.__asumi__).passback.callback[ASUMI_ID](true) })
+                 }
+             }
+         });
+     });
+    </script>
+
+    <iframe id="postbid_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" allowtransparency="true" width="300" height="250" src="./index_files/saved_resource(2).html">
+    </iframe></div>
+</div></div></div>
+<iframe src="./index_files/syncframe.html" width="0" height="0" frameborder="0" title="Criteo GUM iframe" style="border-width: 0px; margin: 0px; display: none;"></iframe></body></html>
+
+
