--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <!-- saved from url=(0031)http://onzonium.at-ninja.jp/dp/ -->
 <html lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
-<title _msthash="149916" _msttexthash="377572">ATOM DIFFICULTY TABLE (DP)</title>
+<title _msthash="149916" _msttexthash="377572">24K NORMAL</title>
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 <meta http-equiv="Content-Style-Type" content="text/css">
 
-<meta name="bmstable" content="http://onzonium.at-ninja.jp/dp/header.json">
+<meta name="bmstable" content="https://actionette.github.io/24ktable/header.json">
 <link href="style.css" rel="stylesheet" type="text/css" media="screen,print">
 <script src="jquery-2.0.2.min.js"></script>
 </head>
