--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <!-- saved from url=(0044)http://www.ribbit.xyz/bms/tables/normal.html -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<script type="text/javascript" charset="utf8" src="./normal/jquery-2.1.3.min.js.download"></script>
-<script type="text/javascript" charset="utf8" src="./normal/jquery.dataTables.min.js.download"></script>
-<script type="text/javascript" charset="utf8" src="./normal/natural.js.download"></script>
-<script type="text/javascript" charset="utf8" src="./normal/showtable.js.download"></script>
-<link rel="stylesheet" type="text/css" href="./ribbit_files/jquery.dataTables.min.css">
+<script type="text/javascript" charset="utf8" src="./24normal/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" charset="utf8" src="./24normal/jquery.dataTables.min.js"></script>
+<script type="text/javascript" charset="utf8" src="./24normal/natural.js"></script>
+<script type="text/javascript" charset="utf8" src="./24normal/showtable.js"></script>
+<link rel="stylesheet" type="text/css" href="./24normal/jquery.dataTables.min.css">
 <!--<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/overcast/jquery-ui.css">-->
-<link rel="stylesheet" type="text/css" href="./normal/table.css">
+<link rel="stylesheet" type="text/css" href="./24normal/table.css">
 <title>24K Normal</title>
 <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json">
 </head>
