--- a/index.html
+++ b/index.html
@@ -42,3 +42,34 @@
 
 
 </body></html>
+
+
+
+===
+
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js.download"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js.download"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/natural.js.download"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/showtable.js.download"></script>
+<!--<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/overcast/jquery-ui.css">-->
+<link rel="stylesheet" type="text/css" href="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.css">
+        <title>24K Normal</title>↩
+        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+
+		<h1>24K Normal</h1>
+		<div id="difficulty_table">
+		<div id="table_list_wrapper" class="dataTables_wrapper no-footer">
+		<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-tl ui-corner-tr">
+		<div id="table_list_filter" class="dataTables_filter">
+		<label>Search:<input type="search" class="" placeholder="" aria-controls="table_list">
+		</label></div></div></div></div>
+		<table cellpadding="0" cellspacing="0" border="0" class="compact hover stripe row-border dataTable no-footer" id="table_list" role="grid"><thead>
+		</thead>
+		</table><div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-bl ui-corner-br"></div>
+		
+	</body>
+	
+</html>
