--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js.download"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js.download"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/natural.js.download"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/showtable.js.download"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/natural.js"></script>
+<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/showtable.js"></script>
 <!--<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/overcast/jquery-ui.css">-->
 <link rel="stylesheet" type="text/css" href="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.css">
-        <title>24K Normal</title>↩
+        <title>24K Normal</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
 
 		<h1>24K Normal</h1>
