--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@
 		<div id="table_list_wrapper" class="dataTables_wrapper no-footer">
 		<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-tl ui-corner-tr">
 		<div id="table_list_filter" class="dataTables_filter">
-		<label>Search:<input type="search" class="" placeholder="" aria-controls="table_list">
-		</label></div></div></div></div>
-		<table cellpadding="0" cellspacing="0" border="0" class="compact hover stripe row-border dataTable no-footer" id="table_list" role="grid"><thead>
-		</thead>
-		</table><div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-bl ui-corner-br"></div>
+		</div></div></div></div>
+		<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-bl ui-corner-br"></div>
 		
 	</body>
 	
