--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja" lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang=ja>
 
 <script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js"></script>
