--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
-<!DOCTYPE html>
-<html lang=ja>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="ja"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/natural.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://actionette.github.io/24ktable/24normal/showtable.js"></script>
-<!--<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/overcast/jquery-ui.css">-->
+<script type="text/javascript" charset="utf8" src="https://actionette.github.io/24ktable/24normal/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://actionette.github.io/24ktable/24normal/natural.js"></script>
+<script type="text/javascript" charset="utf8" src="https://actionette.github.io/24ktable/24normal/showtable.js"></script>
 <link rel="stylesheet" type="text/css" href="https://actionette.github.io/24ktable/24normal/jquery.dataTables.min.css">
-        <title>24K Normal</title>
-        <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
+<!--<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/overcast/jquery-ui.css">-->
+<link rel="stylesheet" type="text/css" href="https://actionette.github.io/24ktable/24normal/table.css">
+<title>24K Normal</title>
+<meta name="bmstable" content="https://actionette.github.io/24ktable/header.json">
+</head>
+<body><div id="content">
+<h1>24K Normal</h1>
+<h2 style="text-align: right; display: none;">非公式変換 for GLAssist</h2>
+<div style="text-align: right">最終更新日: <span id="last_update">2017/02/01</span></div>
+<div style="text-align: right">作成: <a href="http://tumblr.ribbit.xyz/">Ribbit</a></div>
+<div style="text-align: right">オリジナル: <a id="original_url" href="https://actionette.github.io/24ktable/header.json">24K Normal</a></div>
+<div style="text-align: right">上記サイトの難易度表に楽曲情報を付加し非公式に変換・再構築を行っています</div>
+<div style="text-align: right">本ページの URL を登録することで難易度表フォーマットに対応したツールで管理することが出来ます</div>
+<div id="difficulty_table"><div id="table_list_wrapper" class="dataTables_wrapper no-footer">
+<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-tl ui-corner-tr"><div id="table_list_filter" class="dataTables_filter">
+<label>Search:<input type="search" class="" placeholder="" aria-controls="table_list">
+</label></div></div>
+<table cellpadding="0" cellspacing="0" border="0" class="compact hover stripe row-border dataTable no-footer" id="table_list" role="grid"><thead>
+<tr role="row">
+<th class="dt-center row-border tooltip-right col_level sorting ui-state-default sorting_asc" tabindex="0" aria-controls="table_list" rowspan="1" colspan="1" aria-sort="ascending" aria-label="レベル: activate to sort column descending">
+<div class="DataTables_sort_wrapper">レベル<span class="DataTables_sort_icon css_right ui-icon ui-icon-triangle-1-n"></span></div></th>
+<th class="dt-head-center compact tooltip-right sorting_disabled ui-state-default" rowspan="1" colspan="1" aria-label="タイトル">
+<div class="DataTables_sort_wrapper">タイトル<span class="DataTables_sort_icon"></span></div></th>
+<th class="dt-head-center compact tooltip-right sorting_disabled ui-state-default" rowspan="1" colspan="1" aria-label="アーティスト">
+<div class="DataTables_sort_wrapper">アーティスト<span class="DataTables_sort_icon"></span></div></th>
+<th class="dt-center compact tooltip-right col_diff_link sorting_disabled ui-state-default" rowspan="1" colspan="1" aria-label="差分">
+<div class="DataTables_sort_wrapper">差分<span class="DataTables_sort_icon"></span></div></th>
+<th class="dt-center compact tooltip-right col_score_link sorting_disabled ui-state-default" rowspan="1" colspan="1" aria-label="譜面">
+<div class="DataTables_sort_wrapper">譜面<span class="DataTables_sort_icon"></span></div></th>
+<th class="dt-head-center row-border tooltip-right col_comment sorting_disabled ui-state-default" rowspan="1" colspan="1" aria-label="コメント"><div class="DataTables_sort_wrapper">コメント<span class="DataTables_sort_icon">
+</span></div></th></tr></thead>
+</table><div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-bl ui-corner-br"></div></div></div>
+</div>
 
-		<h1>24K Normal</h1>
-		<div id="difficulty_table">
-		<div id="table_list_wrapper" class="dataTables_wrapper no-footer">
-		<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-tl ui-corner-tr">
-		<div id="table_list_filter" class="dataTables_filter">
-		</div></div></div></div>
-		<div class="fg-toolbar ui-toolbar ui-widget-header ui-helper-clearfix ui-corner-bl ui-corner-br"></div>
-		
-	</body>
-	
-</html>
+
+</body></html>
