--- a/24insane.html
+++ b/24insane.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="ja">
     <head>
         <title>24k Insane</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/insane-header.json" />
