--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     responsiveLayout:"collapse",
                     responsiveLayoutCollapseStartOpen:false,
                     groupHeader: function(value, count, data, group){
-                        return `<span>${header.symbol}${value} (${count} pattern)</span>`;
+                        return `<span>${header.symbol}${value} (${count} Songs)</span>`;
                     },
                     columns: [
                         {formatter:"responsiveCollapse", field:"collapse", width:30, minWidth:30, align:"center", resizable:false, headerSort:false},
