--- a/index.html
+++ b/index.html
@@ -33,7 +33,35 @@
         <meta http-equiv="Cache-Control" content="no-cache">
         <meta http-equiv="Expires" content="0">
     </head>
-    <body>
+    
+       <body>
+        <div class="container">
+            <div id="table" class="table-sm table-bordered"></div>
+        </div>
+        <div id="bottom_buttons" class="float-right fixed-bottom text-right" style="pointer-events: none;">
+            <button type="button" class="btn btn-primary btn-circle" data-toggle="modal" data-target="#calculator" data-content="音頭計算機" data-placement="top" style="pointer-events: auto;">
+                <i class="fas fa-calculator fa-lg"></i>
+            </button>
+        </div>
+
+        <div class="modal fade" id="calculator" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+          <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">音頭計算機</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body embed-responsive" style="padding-top: 60vh;">
+                <iframe src="https://kju8.github.io/ondo_calculator/"  class="embed-responsive-item"></iframe>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </body>
 
     <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.2.4/dist/js/tabulator.min.js" ></script>
