--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>24k Normal</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://actionette.github.io/24ktable/bootstrap.min.css">
         <!-- Tabulator -->
-        <link href="https://unpkg.com/tabulator-tables@4.2.4/dist/css/bootstrap/tabulator_bootstrap4.min.css" rel="stylesheet" />
+        <link href="https://actionette.github.io/24ktable/tabulator_bootstrap4.min.css" rel="stylesheet" />
         <style>
             .btn-circle {
                 width: 70px;
