--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>24k Normal</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/header.json" />
 
-        <link rel="stylesheet" href="https://actionette.github.io/24ktable/bootstrap.min.css">
+        <link rel="stylesheet" href="https://actionette.github.io/24ktable/current/bootstrap.min.css">
         <!-- Tabulator -->
-        <link href="https://actionette.github.io/24ktable/tabulator_bootstrap4.min.css" rel="stylesheet" />
+        <link href="https://actionette.github.io/24ktable/current/tabulator_bootstrap4.min.css" rel="stylesheet" />
         <style>
             .btn-circle {
                 width: 70px;
