--- a/24insane.html
+++ b/24insane.html
@@ -5,9 +5,9 @@
         <title>24k Insane</title>
         <meta name="bmstable" content="https://actionette.github.io/24ktable/insane-header.json" />
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://actionette.github.io/24ktable/current/bootstrap.min.css">
         <!-- Tabulator -->
-        <link href="https://unpkg.com/tabulator-tables@4.2.4/dist/css/bootstrap/tabulator_bootstrap4.min.css" rel="stylesheet" />
+        <link href="https://actionette.github.io/24ktable/current/tabulator_bootstrap4.min.css" rel="stylesheet" />
         <style>
             .btn-circle {
                 width: 70px;
@@ -36,30 +36,6 @@
     <body>
         <div class="container">
             <div id="table" class="table-sm table-bordered"></div>
-        </div>
-        <div id="bottom_buttons" class="float-right fixed-bottom text-right" style="pointer-events: none;">
-            <button type="button" class="btn btn-primary btn-circle" data-toggle="modal" data-target="#calculator" data-content="音頭計算機" data-placement="top" style="pointer-events: auto;">
-                <i class="fas fa-calculator fa-lg"></i>
-            </button>
-        </div>
-
-        <div class="modal fade" id="calculator" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-          <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">音頭計算機</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body embed-responsive" style="padding-top: 60vh;">
-                <iframe src="https://kju8.github.io/ondo_calculator/"  class="embed-responsive-item"></iframe>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
         </div>
     </body>
 
@@ -92,7 +68,7 @@
                     responsiveLayout:"collapse",
                     responsiveLayoutCollapseStartOpen:false,
                     groupHeader: function(value, count, data, group){
-                        return `<span>${header.symbol}${value} (${count} pattern)</span>`;
+                        return `<span>${header.symbol}${value} (${count} Songs)</span>`;
                     },
                     columns: [
                         {formatter:"responsiveCollapse", field:"collapse", width:30, minWidth:30, align:"center", resizable:false, headerSort:false},
@@ -128,7 +104,7 @@
                                 return value;
                             },
                         },
-                        { title: "OND-ize", field: "name_diff", minWidth: 100, headerSort:false, resizable: false,
+                        { title: "Difficulty", field: "name_diff", minWidth: 100, headerSort:false, resizable: false,
                             formatter: function(cell, formatterParams, onRendered) {
                                 cell.getElement().style.whiteSpace = "pre-wrap";
                                 const value = cell.getValue();
