--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <style>
             body {
-                background-image: url('actionette.github.io/24ktable/test.png');
+                background-image: url('https://actionette.github.io/24ktable/test.png');
             }
         </style>
     </body>
