--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <style>
             body {
                 background-image: url('https://actionette.github.io/24ktable/test.png');
+                background-repeat: no-repeat;
             }
         </style>
     </body>
