--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             body {
                 background-image: url('https://actionette.github.io/24ktable/test.png');
                 background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: cover;
             }
         </style>
     </body>
