--- a/index.html
+++ b/index.html
@@ -126,7 +126,16 @@
                         },
                         { title: "Original Title", field: "original_title", minWidth: 10000, headerSort:false, resizable: false},
                         { title: "BPM Ratio", field: "bpm_ratio", minWidth: 10000, headerSort:false, resizable: false},
-                        { title: "Comment", field: "html_comment", minWidth: 10000, headerSort:false, resizable: false, formatter: "html"},
+                        { title: "Comment", field: "html_comment", minWidth: 100, headerSort:false, resizable: false, 
+                         formatter: function(cell, formatterParams, onRendered) {
+                                cell.getElement().style.whiteSpace = "pre-wrap";
+                                const value = cell.getValue();
+                                const data = cell.getRow().getData();
+                                const url = data.url_diff;
+                                if(url){
+                                    return `<a href="${url}" target="_blank">${value}</a>`
+                                }
+                        },
                     ],
                     responsiveLayoutCollapseFormatter:function(data){
                         //data - an array of objects containing the column title and value for each cell
